--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </head>
 <body>
 
-    <audio id="bg-music" loop>
+    <audio id="ID3" loop>
         <source src="https://media1.vocaroo.com/mp3/1kbE623fNJ0h" type="audio/mp3"> 
         </audio>
     <audio id="sfx-magic" src="https://www.myinstants.com/media/sounds/fairy-dust-sparkle.mp3"></audio>
